# commonmark-spec

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  COPYING  CommonMark.dtd  Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.nmake  Makefile.old  README.md  RELEASE_CHECKLIST.md  TODO  Testing Templates.md  alternative-html-blocks.txt  autogen.sh  benchmarks.md  changelog.c.txt  changelog.spec  changelog.spec.txt  changelog.txt  commonmark.rb  config.h.cmake  configure.ac  dingus.html  eslint.json  html2ast.py  index.html  index.js  leakcheck.md  license.uthash.txt  make_site_index.sh  makespec.py  mkcasefold.pl  narrative.md  nmake.bat  package.json  (+19 more)
api_test/: CMakeLists.txt  cplusplus.cpp  cplusplus.h  harness.c  harness.h  main.c
bench/: stats.py
extensions/: Desirable and popular Commonmark extensions.md  Discourse.flavor.md  GitHub.flavor.md  GitLab.flavor.md  Linguistic.flavor.md  Markua.flavor.md  attribute.txt  basic-pipe-table.txt  basic-pipe-tables.txt  bookmatter.txt  changelog-list.txt  color-swatch.txt  critic-markup.txt  definition-list.txt  deletion.txt  diagram.txt  document-metadata.txt  emphasis.txt  explicit-target.txt  fenced-quotation.txt  figure.txt  footnote.txt  footnotes.txt  form.txt  formula.txt  generic-metadata.txt  gfm-extensions.txt  glossary.txt  html-filter.txt  image-size.txt  implicit-target.txt  infostring.txt  inline-diff.txt  insertion.txt  marked-text.txt  math.txt  metadata.txt  multimedia.txt  plain-link.txt  plain-links.txt  (+18 more)
js/: .npmignore  LICENSE  README.md  bench.js  changelog.js.txt  cmark.js  dingus.html  eslint.json  index.html  markdown  package.json  stmd.js  test.js
js/lib/: blocks.js  common.js  from-code-point.js  html-renderer.js  html.js  html5-entities.js  index.js  inlines.js  node.js  normalize-reference.js  xml.js
man/: CMakeLists.txt  Doxyfile.in  Makefile  cmark.1.md  cmark.3.md  make_man_page.py  stmd.1.md
man/man1/: cmark.1  stmd.1
man/man3/: cmark.3
oldtests/: Makefile
oldtests/Original/: Amps_and_angle_encoding.html  Auto_links.html  Backslash_escapes.html  Blockquotes_with_code_blocks.html  Code_Spans.html  Images.html  Inline_HTML_Advanced.html  Inline_HTML_Simple.html  Links_inline_style.html  Links_reference_style.html  Links_shortcut_references.html  Markdown_Documentation_Basics.html  Markdown_Documentation_Basics.markdown  Markdown_Documentation_Syntax.html  Nested_blockquotes.html  Ordered_and_unordered_lists.html  README  Tabs.html
src/: CMakeLists.txt  Makefile.am  ast.c  ast.h  bench.h  blocks.c  bstrlib.c  buffer.c  buffer.h  case_fold_switch.c  casefold.c  chunk.h  cm.h  cmark.c  cmark.h  cmark_ctype.c  cmark_ctype.h  config.h.in  debug.h  detab.c  getopt.c  houdini.h  houdini_href_e.c  houdini_html_e.c  houdini_html_u.c  html.c  html_unescape.gperf  html_unescape.h  inlines.c  inlines.h  iterator.c  iterator.h  lib_test.c  libcmark.pc.in  libstmd.h  main.c  man.c  mom.c  node.c  node.h  (+12 more)
src/html/: houdini.h  houdini_href_e.c  houdini_html_e.c  houdini_html_u.c  html.c  html_unescape.h
test/: CMakeLists.txt  cmark.py  normalize.py  pathological_tests.py  spec_tests.py
tools/: detailed_benchmarks.sh  extract-references.lua  format_benchmarks.awk  make_spec.lua  makespec.py  spec2js.js  specfilter.hs  template.commonmark  template.html  template.latex  template.md  template.tex
wrappers/: wrapper.lua
